--- a/src/component/component.css
+++ b/src/component/component.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #999;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -59,4 +59,13 @@
   .__COMPONENT_NAME__ button {
     background-color: #f9f9f9;
   }
+}
+
+.__COMPONENT_NAME__ {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.__COMPONENT_NAME__ .card {
+  padding: 2em;
 }
